Fix pie chart spacing

--- a/app/styles/components/pie-chart-layout.scss
+++ b/app/styles/components/pie-chart-layout.scss
@@ -5,7 +5,7 @@
   margin: 60px auto;
 
   .chart-modifiers {
-    width: 60%;
+    width: 50%;
 
     h4 {
       margin-bottom: 0;
@@ -32,7 +32,7 @@
   }
 
   .chart-wrapper {
-    width: 40%;
+    width: 50%;
     padding-top: 50px;
   }
 
