--- a/app/styles/components/pie-chart.scss
+++ b/app/styles/components/pie-chart.scss
@@ -7,7 +7,7 @@
 
     position: absolute;
     top: -10%;
-    right: -15%;
+    right: 0;
     text-align: left;
 
     .fuel-color {
